fix: CORS en SecurityConfig ahora lee variable de entorno CORS_ALLOWED_ORIGINS
Co-authored-by: Cursor <cursoragent@cursor.com>